# querizer

backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: auth.py  config.py  main.py  supabase.py
backend/app/routers/: challenge.py  database.py  feedback.py  polar.py  score.py  user.py
backend/app/schemas/: challenge.py  dashboard.py  database.py  feedback.py  polar.py  tracking.py  user.py
backend/app/services/: _supabase.py  _utils.py  dashboard.py  quota.py  tracking.py  user.py  utils.py
backend/app/services/challenge/: _utils.py  functions.py  prompt.py  utils.py
backend/app/services/database/: _utils.py  functions.py  prompt.py  utils.py
backend/app/services/polar/: functions.py
frontend/: .gitignore  components.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(main)/: layout.tsx
frontend/app/privacy/: page.tsx
frontend/app/signin/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/: nav-group.tsx  nav-user.tsx  page-loading.tsx  sql-editor.tsx
frontend/components/auth/: signin-form.tsx
frontend/components/challenges/: challenge-card.tsx  challenge-content.tsx  challenge-generate-button.tsx  generate-challenge-button.tsx
frontend/components/database/: create-database-button.tsx  database-card.tsx  database-editor.tsx  database-settings.tsx  (+4 more)
frontend/hooks/: challenge.ts  dashboard.ts  database.ts  polar.ts  user.ts
frontend/lib/: api.ts  const.ts  supabase.ts  types.ts
supabase/: config.toml
supabase/migrations/: 20260429071015_init.sql
(+22 files in other folders)
